--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -1,22 +1,22 @@
-name: Pylint
+name: Pytest
 on: [push]
 jobs:
   build:
-    name: Run python linter
+    name: Run unit tests
     runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: ["3.9", "3.10", "3.11"]
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
       - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v3
+        uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install pylint
-      - name: Run pylint
-        run: |
-          pylint aws_lambda_swapcase/src/*.py
+        run: pip install pytest pytest-md pytest-emoji
+      - uses: pavelzw/pytest-action@v2
+        with:
+          emoji: false
+          verbose: false
+          job-summary: true
